--- a/index.html
+++ b/index.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./vue.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap" rel="stylesheet">
     <title>Techno</title>
-</head>
-<body>
+  </head>
+  <body>
     <div id="app">
-        {{produtos}}
+      <section class="produtos">
+        <div v-for="produto in produtos" :key="produto.id" class="produto">
+          <img :src="produto.img" class="produto_img" alt="produto.nome" />
+          <div class="produto_info">
+            <span class="produto_preco">{{produto.preco | numeroPreco }}</span>
+            <h2 class="produto_titulo">{{produto.nome}}</h2>
+          </div>
+        </div>
+      </section>
     </div>
     <script src="./app.js"></script>
-</body>
+  </body>
 </html>
