--- a/index.html
+++ b/index.html
@@ -5,17 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./vue.js"></script>
     <link rel="stylesheet" href="style.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Techno</title>
   </head>
+
   <body>
     <div id="app">
+      <section class="modal" v-if="produto">
+        <div class="modal_conatiner">
+          <div class="modal_img">
+            <img :src="produto.img" :alt="produto.nome" />
+          </div>
+          <div class="modal_dados">
+            <span class="modal_preco">{{produto.preco}}</span>
+            <h2 class="modal_titulo">{{produto.nome}}</h2>
+            <p>{{produto.descricao}}</p>
+            <button class="modal_btn">Adicionar Item</button>
+          </div>
+          <div class="avaliacoes">
+            <h2 class="avaliacoes_subtitulo">Avaliações</h2>
+            <ul>
+              <li v-for="avaliacao in produto.reviews" class="avaliacao">
+                <p class="avaliacao_descricao">{{avaliacao.descricao}}</p>
+                <p class="avaliacao_usuario">{{avaliacao.nome}} | {{avaliacao.estrelas}} estrelas</p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
       <section class="produtos">
-        <div v-for="produto in produtos" :key="produto.id" class="produto">
-          <img :src="produto.img" class="produto_img" alt="produto.nome" />
+        <div
+          v-for="item in produtos"
+          @click="fetchProduto(item.id)"
+          :key="item.id"
+          class="produto"
+        >
+          <img :src="item.img" class="produto_img" alt="item.nome" />
           <div class="produto_info">
-            <span class="produto_preco">{{produto.preco | numeroPreco }}</span>
-            <h2 class="produto_titulo">{{produto.nome}}</h2>
+            <span class="produto_preco">{{item.preco | numeroPreco }}</span>
+            <h2 class="produto_titulo">{{item.nome}}</h2>
           </div>
         </div>
       </section>
