--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
 
   <body>
     <div id="app">
-      <section class="modal" v-if="produto">
+      <section class="modal" v-if="produto" @click="fecharModal">
         <div class="modal_container">
           <div class="modal_img">
             <img :src="produto.img" :alt="produto.nome" />
           </div>
           <div class="modal_dados">
+          <button @click="produto = false" class="modal_fechar">X</button>
             <span class="modal_preco">{{produto.preco}}</span>
             <h2 class="modal_titulo">{{produto.nome}}</h2>
             <p>{{produto.descricao}}</p>
@@ -42,7 +43,7 @@
       <section class="produtos">
         <div
           v-for="item in produtos"
-          @click="fetchProduto(item.id)"
+          @click="abrirModal(item.id)"
           :key="item.id"
           class="produto"
         >
