--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
 
   <body>
     <div id="app">
+
+    <header class="header">
+        <img class="logo" src="./assets/techno.svg" alt="logo">
+        <div class="carrinho_menu">{{carrinhoTotal | numeroPreco }} | {{carrinho.length}}</div>
+        <ul>
+            <li v-for="(item, index) in carrinho">
+                <p>{{item.nome}}</p>
+                <button @click="removerItem(index)">X</button>
+            </li>
+        </ul>
+    </header>
+    
       <section class="modal" v-if="produto" @click="fecharModal">
         <div class="modal_container">
           <div class="modal_img">
@@ -21,10 +33,11 @@
           </div>
           <div class="modal_dados">
           <button @click="produto = false" class="modal_fechar">X</button>
-            <span class="modal_preco">{{produto.preco}}</span>
+            <span class="modal_preco">{{produto.preco | numeroPreco }}</span>
             <h2 class="modal_titulo">{{produto.nome}}</h2>
             <p>{{produto.descricao}}</p>
-            <button class="modal_btn">Adicionar Item</button>
+            <button v-if="produto.estoque > 0" class="modal_btn" @click="adicionarItem">Adicionar Item</button>
+            <button v-else class="modal_btn esgotado" disabled>Produto Esgotado</button>
           </div>
           <div class="avaliacoes">
             <h2 class="avaliacoes_subtitulo">Avaliações</h2>
